# easylazy

./: CHANGELOG.md  Cargo.toml  README.md
.github/: dependabot.yml
.github/workflows/: greetings.yml  release-plz.yml  rust-clippy.yml  stale.yml
src/: lib.rs
