[package]
    authors       = ["Eric Evans <CireSnave@gmail.com>"]
    categories    = ["algorithms", "caching", "data-structures", "no-std"]
    description   = "Easy lazy initialization of variables"
    documentation = "https://github.com/ciresnave/easylazy"
    edition       = "2021"
    homepage      = "https://github.com/ciresnave/easylazy"
    keywords      = ["initialization", "lazy"]
    license       = "MIT"
    name          = "easylazy"
    readme        = "README.md"
    repository    = "https://github.com/ciresnave/easylazy"
    rust-version  = "1.58.1"
    version       = "0.2.0"

    # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
